added the response to the actual webpage now. Page is ugly as hell but it's simple and works

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1>Get iOffice Space Category</h1>
+    <h1>Get iOffice Space Category (Test Environment) </h1>
     <form id="loginForm" onsubmit="return false;">
         <label for="username">API Username:</label>
         <input type="text" id="username" name="username" required>
@@ -19,6 +19,7 @@
 
         <label for="spaceID">Space ID:</label>
         <input type="text" id="spaceID" name="spaceID" required>
+        <a> (Try 60706, 60707, and 60731)</a>
         <br>
 
         <button type="button" id="submitButton">Submit</button>
